Add Procfile and packaging

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,29 +36,59 @@ play.evolutions {
 # EBean: https://playframework.com/documentation/latest/JavaEbean
 # Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
 #
-slick {
-  dbs {
-    default {
-      profile="slick.jdbc.PostgresProfile$"
-      db {
-        connectionPool = "HikariCP" //use HikariCP for our connection pool
-        profile = "org.postgresql.Driver"
-        dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" //Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
-        properties = {
-          serverName = "db"  // db if run in docker
-          portNumber = "5432"
-          databaseName = "fitness"
-          user = "postgres"
-          password = "postgres"
-        }
-      }
-      numThreads = 10
-      connectionTimeout = 6000 // In the hope that this resolves the connection errors.
-      leakDetectionThreshold=60000 // In the hope that this resolves the connection errors.
-    }
-  }
-}
+#db.default.driver=org.postgresql.Driver
+#db.default.url=${?DATABASE_URL}
+
+# For Docker deployment
+#slick {
+#  dbs {
+#    default {
+#      profile="slick.jdbc.PostgresProfile$"
+#      db {
+#        connectionPool = "HikariCP" //use HikariCP for our connection pool
+#        profile = "org.postgresql.Driver"
+#        dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" //Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
+#        properties = {
+#          serverName = "db"  // db if run in docker
+#          portNumber = "5432"
+#          databaseName = "fitness"
+#          user = "postgres"
+#          password = "postgres"
+#        }
+#      }
+#      numThreads = 10
+#      connectionTimeout = 6000 // In the hope that this resolves the connection errors.
+#      leakDetectionThreshold=60000 // In the hope that this resolves the connection errors.
+#    }
+#  }
+#}
 
 #slick.dbs.default.profile="slick.jdbc.H2Profile$"
 #slick.dbs.default.db.profile="org.h2.Driver"
 #slick.dbs.default.db.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1"
+slick {
+    dbs {
+        default {
+            profile = "slick.jdbc.PostgresProfile$"
+            db {
+                connectionPool = "HikariCP"
+                profile = "org.postgresql.Driver"
+                dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" #Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
+                properties = {
+                    url = "postgresql://postgres:postgres@localhost:5432/postgres"
+                    serverName = "db"  # db if run in docker
+                    portNumber = "5432"
+                    databaseName = "fitness"
+                    user = "postgres"
+                    password = "postgres"
+                }
+            }
+            numThreads = 10
+            #connectionTimeout = 6000 // In the hope that this resolves the connection errors.
+            #leakDetectionThreshold=60000 // In the hope that this resolves the connection errors.
+        }
+    }
+}
+#slick.dbs.default.profile =
+#slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+#slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
