Fixed application.conf for heroku

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@ play.http.secret.key="59zN2gcqN7QfEgWscC2zn8A?IsLd7qJT2iq[Rb:8c5fXoLxPsccUHVSX[5
 #
 play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
-  db.default.enabled = true
+  db.default.enabled = false # make this false when deploy with heroku
   autoApply = true
 }
 
@@ -75,7 +75,7 @@ slick {
                 profile = "org.postgresql.Driver"
                 dataSourceClass = "org.postgresql.ds.PGSimpleDataSource" #Simple datasource with no connection pooling. The connection pool has already been specified with HikariCP.
                 properties = {
-                    url = "postgresql://postgres:postgres@localhost:5432/postgres"
+                    url = "postgresql://postgres:postgres@localhost:5432/"
                     serverName = "db"  # db if run in docker
                     portNumber = "5432"
                     databaseName = "fitness"
