Add host allowed in app conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,6 +89,10 @@ slick {
         }
     }
 }
+
+hosts{
+    allowed = ["scala-fitness-app.herokuapp.com", "localhost:9000", "127.0.0.1"]
+}
 #slick.dbs.default.profile =
 #slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
 #slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
