change play.filter.host.allowed for heroku

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -90,9 +90,14 @@ slick {
     }
 }
 
-hosts{
-    allowed = ["scala-fitness-app.herokuapp.com", "localhost:9000", "127.0.0.1"]
+play.filters.hosts {
+  allowed = ["."]
 }
+
+# hosts{
+#     allowed = ["scala-fitness-app.herokuapp.com", "localhost:9000", "127.0.0.1"]
+# }
+#play.filters.disabled+=play.filters.csrf.CSRFFilter # is it for Heroku?
 #slick.dbs.default.profile =
 #slick.dbs.default.db.dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
 #slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
